<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_blue_gradient"
        android:orientation="vertical">
        <!-- Google | Udacity logos -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/google_udacity_logos"
            android:src="@drawable/goud_logo" />
        <!-- line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/White" />
        <!-- About txt -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:drawablePadding="20dp"
            android:drawableTop="@drawable/mo"
            android:gravity="center"
            android:text="@string/this_app_was"
            android:textColor="@color/White"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <!-- Connect btn -->
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/in_connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_white_bkg"
            android:padding="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/connect_me_on_linkedin" />
        <!-- Back btn -->
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/about_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_bkg_dark"
            android:text="@string/back"
            android:padding="20dp"
            android:textColor="@color/White"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>